@@ -41,6 +41,113 @@
   :group 'lsp-dockerfile
   :type '(repeat :tag "List of string values" string))
 
+;; Diagnostic settings
+(lsp-defcustom lsp-dockerfile-deprecated-maintainer "warning"
+  "Controls the diagnostic severity for the deprecated MAINTAINER instruction."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.deprecatedMaintainer")
+
+(lsp-defcustom lsp-dockerfile-directive-casing "warning"
+  "Controls the diagnostic severity for parser directive casing.
+Parser directives include escape and syntax."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.directiveCasing")
+
+(lsp-defcustom lsp-dockerfile-empty-continuation-line "ignore"
+  "Controls the diagnostic severity for empty continuation lines."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.emptyContinuationLine")
+
+(lsp-defcustom lsp-dockerfile-instruction-casing "warning"
+  "Controls the diagnostic severity for instruction casing.
+Instructions include FROM, RUN, COPY, etc."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.instructionCasing")
+
+(lsp-defcustom lsp-dockerfile-instruction-cmd-multiple "warning"
+  "Controls the diagnostic severity for multiple CMD instructions.
+Only the last CMD instruction takes effect in a Dockerfile."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.instructionCmdMultiple")
+
+(lsp-defcustom lsp-dockerfile-instruction-entrypoint-multiple "warning"
+  "Controls the diagnostic severity for multiple ENTRYPOINT instructions.
+Only the last ENTRYPOINT instruction takes effect in a Dockerfile."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.instructionEntrypointMultiple")
+
+(lsp-defcustom lsp-dockerfile-instruction-healthcheck-multiple "warning"
+  "Controls the diagnostic severity for multiple HEALTHCHECK instructions.
+Only the last HEALTHCHECK instruction takes effect in a Dockerfile."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.instructionHealthcheckMultiple")
+
+(lsp-defcustom lsp-dockerfile-instruction-json-single-quotes "warning"
+  "Controls the diagnostic severity for JSON arrays using single quotes.
+JSON arrays in Dockerfile instructions should use double quotes."
+  :type '(choice (const "ignore")
+                 (const "warning")
+                 (const "error"))
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.diagnostics.instructionJSONInSingleQuotes")
+
+;; Formatter settings
+(lsp-defcustom lsp-dockerfile-format-ignore-multiline-instructions nil
+  "Whether to ignore multiline instructions during formatting."
+  :type 'boolean
+  :group 'lsp-dockerfile
+  :package-version '(lsp-mode . "9.0.1")
+  :lsp-path "docker.languageserver.formatter.ignoreMultilineInstructions")
+
+(lsp-register-custom-settings
+ '(("docker.languageserver.diagnostics.deprecatedMaintainer"
+    lsp-dockerfile-deprecated-maintainer)
+   ("docker.languageserver.diagnostics.directiveCasing"
+    lsp-dockerfile-directive-casing)
+   ("docker.languageserver.diagnostics.emptyContinuationLine"
+    lsp-dockerfile-empty-continuation-line)
+   ("docker.languageserver.diagnostics.instructionCasing"
+    lsp-dockerfile-instruction-casing)
+   ("docker.languageserver.diagnostics.instructionCmdMultiple"
+    lsp-dockerfile-instruction-cmd-multiple)
+   ("docker.languageserver.diagnostics.instructionEntrypointMultiple"
+    lsp-dockerfile-instruction-entrypoint-multiple)
+   ("docker.languageserver.diagnostics.instructionHealthcheckMultiple"
+    lsp-dockerfile-instruction-healthcheck-multiple)
+   ("docker.languageserver.diagnostics.instructionJSONInSingleQuotes"
+    lsp-dockerfile-instruction-json-single-quotes)
+   ("docker.languageserver.formatter.ignoreMultilineInstructions"
+    lsp-dockerfile-format-ignore-multiline-instructions t)))
+
 (lsp-dependency 'docker-langserver
                 '(:system "docker-langserver")
                 '(:npm :package "dockerfile-language-server-nodejs"
@@ -56,6 +163,10 @@
                   :activation-fn (lsp-activate-on "dockerfile")
                   :priority -1
                   :server-id 'dockerfile-ls
+                  :initialized-fn (lambda (workspace)
+                                    (with-lsp-workspace workspace
+                                      (lsp--set-configuration
+                                       (lsp-configuration-section "docker"))))
                   :download-server-fn (lambda (_client callback error-callback _update?)
                                         (lsp-package-ensure 'docker-langserver
                                                             callback error-callback))))
